--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "author": "feras daeef",
   "license": "MIT",
@@ -21,6 +21,13 @@
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
+    "css-loader": "^0.23.1",
+    "foundation-sites": "^6.2.0",
+    "jquery": "^2.2.1",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
+    "script-loader": "^0.6.1",
+    "style-loader": "^0.13.0",
     "webpack": "^1.12.13"
   }
 }
